--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "doctrine/dbal": "^3.6.2",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "dev-master",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
