add missing npm packages (focus trap for Alpine.js modals, lightgallery -> will be used on public pages)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-router": "^4.2.1"
     },
     "dependencies": {
-        "alpinejs": "^3.12.3"
+        "@alpinejs/focus": "^3.12.3",
+        "alpinejs": "^3.12.3",
+        "lightgallery": "^2.5.0"
     }
 }
